<resources>
    <string name="app_name">ShoppingAngel</string>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Q5MgH6ZoaY3KrP5bJzx1633WLJml64gXB676OdVu</string>
    <string name="back4app_client_key">VrLQVkoTvL9BnYbGSsf8zwluB5Id1ZuSYCKU46j2</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logout">Logout</string>
    <string name="scan">Scan Barcode</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="add">Add</string>
    <string name="search">Search Item</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="currentBudget">My Budget: $0.00</string>
    <string name="remainingBudget">Remaining Budget: $0.00</string>
    <string name="adjust">Adjust</string>
    <string name="save">Save</string>
</resources>