<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <Button
        android:id="@+id/btnScan"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_round"
        android:text="@string/scan"
        android:textColor="@color/colorMintFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewBudget" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/btn_round"
        android:text="@string/add"
        android:textColor="@color/colorMintFont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toEndOf="@+id/btnScan"
        app:layout_constraintTop_toBottomOf="@+id/etNewBudget" />

    <Button
        android:id="@+id/btnAdjust"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="75dp"
        android:layout_height="43dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_round_dark"
        android:text="@string/adjust"
        android:textColor="@color/colorMintGray"
        app:layout_constraintStart_toEndOf="@+id/etNewBudget"
        app:layout_constraintTop_toBottomOf="@+id/tvRemaining" />

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="50dp"
        android:text="@string/currentBudget"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <TextView
        android:id="@+id/tvRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="10dp"
        android:text="@string/remainingBudget"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

    <EditText
        android:id="@+id/etNewBudget"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemaining" />

</androidx.constraintlayout.widget.ConstraintLayout>