<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/btnAdjust"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="67dp"
        android:layout_height="35dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/btn_round_dark"
        android:text="@string/adjust"
        android:textColor="@color/colorMintGray"
        app:layout_constraintStart_toEndOf="@+id/etNewBudget"
        app:layout_constraintTop_toBottomOf="@+id/tvRemaining" />

    <TextView
        android:id="@+id/tvCurrent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="30dp"
        android:text="@string/currentBudget"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRemaining"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="85dp"
        android:layout_marginTop="10dp"
        android:text="@string/remainingBudget"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCurrent" />

    <EditText
        android:id="@+id/etNewBudget"
        android:layout_width="145dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number|numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRemaining" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCart"
        android:layout_width="420dp"
        android:layout_height="428dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNewBudget" />

</androidx.constraintlayout.widget.ConstraintLayout>